Fixed overflow at the index in features

--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -47,7 +47,7 @@
     display: block;
     height: 317px;
     width: 433px;
-    padding: 45px 110px 75px;
+    padding: 70px 110px 75px;
   }
 }
 
